Updates in site

--- a/src/site/xdoc/download.xml.vm
+++ b/src/site/xdoc/download.xml.vm
@@ -18,9 +18,9 @@
 		websites of the respective projects before using any of these libraries in your own environment.
             </p>
             
-            <h2>Download Sorcer ${v_sorcer_release}</h2>
+            <h2>Download Sorcer ${v_sos_release}</h2>
             <p>
-                Sorcer ${v_sorcer_release} is the first stable release available.
+                Sorcer ${v_sos_release} is the first stable release available.
 		
             </p>
             <table>
@@ -34,27 +34,27 @@
                         <th>Date</th>
                     </tr>
                     <tr>
-			<td>Sorcer ${v_sorcer_release} ZIP release</td>
+			<td>Sorcer ${v_sos_release} ZIP release</td>
 			<td>zip</td> 
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sorcer_release}.zip/download">Download</a></td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}.zip/download">Download</a></td>
                         <td>37 MB</td>
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sorcer_release}.zip.md5/download">MD5</a></td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}.zip.md5/download">MD5</a></td>
                         <td align="center">18/06/2013</td>
                     </tr>
                     <tr>
-			<td>Sorcer ${v_sorcer_release} Windows setup</td>
+			<td>Sorcer ${v_sos_release} Windows setup</td>
 			<td>exe</td> 
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sorcer_release}-setup.exe/download">Download</a></td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}-setup.exe/download">Download</a></td>
                         <td>37 MB</td>
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sorcer_release}-setup.exe.md5/download">MD5</a></td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}-setup.exe.md5/download">MD5</a></td>
                         <td align="center">18/06/2013</td>
                     </tr>
 		    <tr>
-			<td>Sorcer ${v_sorcer_release} cross-platform setup</td>
+			<td>Sorcer ${v_sos_release} cross-platform setup</td>
 			<td>jar</td> 
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sorcer_release}-setup.jar/download">Download</a></td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}-setup.jar/download">Download</a></td>
                         <td>37 MB</td>
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sorcer_release}-setup.jar.md5/download">MD5</a></td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}-setup.jar.md5/download">MD5</a></td>
                         <td align="center">18/06/2013</td>
                     </tr>
                 </tbody>
@@ -66,7 +66,7 @@
 	      <li>if you're running Windows - use the Windows EXE setup file</li>
 	      <li>on other OSes use the JAR installer. After you've downloaded the file you can try double-clicking it, however, depending on your OS configuration this may not invoke the installer. In that case open a terminal window and run
 
-		<pre>java -jar sorcer-${v_sorcer}-setup.jar</pre></li>
+		<pre>java -jar sorcer-${v_sos_release}-setup.jar</pre></li>
   
 		<li>if you prefer a manual install please use the zip file.</li>
 	    </ul>
@@ -77,7 +77,7 @@
 	      <li>Installation on a headless machine
 	      If you only have a console based (headless) access to a machine you can perform the installation using the text-based installer by invoking:
 
-	      <pre>java  -Djava.awt.headless=true -jar sorcer-${v_sorcer}-setup.jar</pre>
+	      <pre>java  -Djava.awt.headless=true -jar sorcer-${v_sos_release}-setup.jar</pre>
 	      </li>
 	      </ul>
 	    </p>
@@ -89,6 +89,5 @@
                         <a href="http://sourceforge.net/projects/sorcer/files/">http://sourceforge.net/projects/sorcer/files/</a>
                     </p>
         </section>
-
     </body>
 </document>
