--- a/src/site/xdoc/download.xml.vm
+++ b/src/site/xdoc/download.xml.vm
@@ -19,7 +19,7 @@
             </p>
             <h2>Download Sorcer ${v_sos_release}</h2>
             <p>
-                Sorcer ${v_sos_release} is the latest stable release available.
+                Sorcer ${v_sos_release} is the latest release available.
 		
             </p>
             <table>
@@ -36,31 +36,31 @@
 			<td>Sorcer ${v_sos_release} ZIP release</td>
 			<td>zip</td> 
                         <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}.zip/download">Download</a></td>
-                        <td>40 MB</td>
+                        <td>63 MB</td>
                         <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}.zip.md5/download">MD5</a></td>
-                        <td align="center">24/07/2013</td>
+                        <td align="center">10/01/2014</td>
                     </tr>
                     <tr>
 			<td>Sorcer ${v_sos_release} Windows setup</td>
 			<td>exe</td> 
                         <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}-setup.exe/download">Download</a></td>
-                        <td>40 MB</td>
+                        <td>65 MB</td>
                         <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}-setup.exe.md5/download">MD5</a></td>
-                        <td align="center">24/07/2013</td>
+                        <td align="center">10/01/2014</td>
                     </tr>
 		    <tr>
 			<td>Sorcer ${v_sos_release} cross-platform setup</td>
 			<td>jar</td> 
                         <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}-setup.jar/download">Download</a></td>
-                        <td>40 MB</td>
+                        <td>64 MB</td>
                         <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-${v_sos_release}/sorcer-${v_sos_release}-setup.jar.md5/download">MD5</a></td>
-                        <td align="center">24/07/2013</td>
+                        <td align="center">10/01/2014</td>
                     </tr>
                 </tbody>
             </table>
 	    
             
-            <h2>Download Sorcer 1.0-M1 - previous stable version</h2>
+            <h2>Download Sorcer 1.0-M2 - previous milestone version.</p>
             <table>
                 <tbody>
                     <tr>
@@ -72,32 +72,32 @@
                         <th>Date</th>
                     </tr>
                     <tr>
-			<td>Sorcer 1.0-M1 ZIP release</td>
+			<td>Sorcer 1.0-M2 ZIP release</td>
 			<td>zip</td> 
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M1/sorcer-1.0-M1.zip/download">Download</a></td>
-                        <td>37 MB</td>
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M1/sorcer-1.0-M1.zip.md5/download">MD5</a></td>
-                        <td align="center">18/06/2013</td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M2/sorcer-1.0-M2.zip/download">Download</a></td>
+                        <td>40 MB</td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M2/sorcer-1.0-M2.zip.md5/download">MD5</a></td>
+                        <td align="center">24/07/2013</td>
                     </tr>
                     <tr>
-			<td>Sorcer 1.0-M1 Windows setup</td>
+			<td>Sorcer 1.0-M2 Windows setup</td>
 			<td>exe</td> 
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M1/sorcer-1.0-M1-setup.exe/download">Download</a></td>
-                        <td>37 MB</td>
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M1/sorcer-1.0-M1-setup.exe.md5/download">MD5</a></td>
-                        <td align="center">18/06/2013</td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M2/sorcer-1.0-M2-setup.exe/download">Download</a></td>
+                        <td>40 MB</td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M2/sorcer-1.0-M2-setup.exe.md5/download">MD5</a></td>
+                        <td align="center">24/07/2013</td>
                     </tr>
 		    <tr>
-			<td>Sorcer 1.0-M1 cross-platform setup</td>
+			<td>Sorcer 1.0-M2 cross-platform setup</td>
 			<td>jar</td> 
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M1/sorcer-1.0-M1-setup.jar/download">Download</a></td>
-                        <td>37 MB</td>
-                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M1/sorcer-1.0-M1-setup.jar.md5/download">MD5</a></td>
-                        <td align="center">18/06/2013</td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M2/sorcer-1.0-M2-setup.jar/download">Download</a></td>
+                        <td>40 MB</td>
+                        <td><a href="http://sourceforge.net/projects/sorcer/files/sorcer-1.0-M2/sorcer-1.0-M2-setup.jar.md5/download">MD5</a></td>
+                        <td align="center">24/07/2013</td>
                     </tr>
                 </tbody>
             </table>
-	    
+
 	    <p>
 	      Pick the most suitable distribution for you:	   	    
 	    <ul>
