[site] fix site code and version

--- a/src/site/xdoc/download.xml.vm
+++ b/src/site/xdoc/download.xml.vm
@@ -60,7 +60,7 @@
             </table>
 	    
             
-            <h2>Download Sorcer 1.0-M2 - previous milestone version.</p>
+            <h2>Download Sorcer 1.0-M2 - previous milestone version.</h2>
             <table>
                 <tbody>
                     <tr>
